<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frases_gatos_cachorros"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/alata"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.20"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/nome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="@string/digitar_nome"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_guardar"
        android:textStyle="bold"
        android:fontFamily="@font/alata"
        android:backgroundTint="@color/water_green"
        app:layout_constraintTop_toBottomOf="@id/nome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="6dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>